group 'com.southwest.css'
version '1.0-SNAPSHOT'

buildscript {
    ext {
        springBootVersion = '1.3.3.RELEASE'        
    }
   repositories {
       mavenCentral()
       maven {
           url "https://plugins.gradle.org/m2/"
       }
   }
   dependencies { 
       classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
   }
}

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'idea'
apply plugin: 'spring-boot'

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        url 'http://maven.springframework.org/release'
        url 'https://repo.spring.io/snapshot'
        url 'https://repo.spring.io/milestone'
    }
    maven { url "https://repo.spring.io/snapshot" }
    maven { url "https://repo.spring.io/milestone" }
    maven { url "http://repo.spring.io/gemstone-release-cache" }
}

sourceCompatibility = 1.8
targetCompatibility = 1.8

dependencies {
   compile("org.springframework.boot:spring-boot-starter-test")
   compile('org.springframework.boot:spring-boot-starter-web') 
   compile("org.springframework.boot:spring-boot-starter-data-gemfire")
   compile("org.apache.commons:commons-lang3:3.0")
   runtime("org.springframework.shell:spring-shell:1.1.0.RELEASE")
}

dependencyManagement {
   imports { 
       mavenBom "org.springframework.cloud:spring-cloud-starter-parent:Brixton.M3" 
   }
}

task wrapper(type: Wrapper) {
   gradleVersion = '2.9'
}

bootRun{
     maxHeapSize = "128m"
    jvmArgs "-XX:MaxPermSize=128m"
    addResources = false
    main = 'com.swacorp.crew.microservices.css.application.Application'
}
